--- a/templates/student_add.html
+++ b/templates/student_add.html
@@ -9,5 +9,7 @@
   <h1>Student was added!</h1>
   <p>{{ first }} {{ last }}</p>
   <p>GitHub Account: {{ github }}</p>
+
+  <!-- ADD LINK TO STUDENT INFO PAGE -->
 </body>
 </html>
