finished adding student form... start grade list

--- a/templates/student_add.html
+++ b/templates/student_add.html
@@ -7,9 +7,9 @@
 
 
   <h1>Student was added!</h1>
-  <p>{{ first }} {{ last }}</p>
-  <p>GitHub Account: {{ github }}</p>
+<!--   <p>{{ first }} {{ last }}</p>
+  <p>GitHub Account: {{ github }}</p> -->
 
-  <!-- ADD LINK TO STUDENT INFO PAGE -->
+  <p><a href="/student"> Student Info </a>
 </body>
 </html>
